Data layer started and some abstraction has been exported.

--- a/UnderTheCork/UnderTheCore.Web/UnderTheCore.Web.csproj
+++ b/UnderTheCork/UnderTheCore.Web/UnderTheCore.Web.csproj
@@ -188,6 +188,7 @@
     <Compile Include="App_Start\IdentityConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\Startup.Auth.cs" />
+    <Compile Include="App_Start\UnderTheCorkSqlDbConfig.cs" />
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
@@ -195,7 +196,6 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\AccountViewModels.cs" />
-    <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
@@ -261,6 +261,16 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Scripts\jquery-1.10.2.min.map" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\UnderTheCork.Data.Models\UnderTheCork.Data.Models.csproj">
+      <Project>{1281F919-8EE1-4C8C-9778-1731E9A84239}</Project>
+      <Name>UnderTheCork.Data.Models</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\UnderTheCork.Data\UnderTheCork.Data.csproj">
+      <Project>{F4990ACF-C1D3-4C12-AE58-D444F538A023}</Project>
+      <Name>UnderTheCork.Data</Name>
+    </ProjectReference>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
