--- a/UnderTheCork/UnderTheCork.Data.Models/UnderTheCork.Data.Models.csproj
+++ b/UnderTheCork/UnderTheCork.Data.Models/UnderTheCork.Data.Models.csproj
@@ -53,6 +53,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Abstracts\BaseDataModel.cs" />
+    <Compile Include="Contracts\IAuditable.cs" />
+    <Compile Include="Contracts\IDeletable.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="User.cs" />
   </ItemGroup>
