--- a/UnderTheCork/UnderTheCork.Data/UnderTheCork.Data.csproj
+++ b/UnderTheCork/UnderTheCork.Data/UnderTheCork.Data.csproj
@@ -55,6 +55,8 @@
   <ItemGroup>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repositories\EfRepository.cs" />
+    <Compile Include="Repositories\IEfRepository.cs" />
     <Compile Include="UnderTheCorkSqlDbContext.cs" />
   </ItemGroup>
   <ItemGroup>
