--- a/UnderTheCork/UnderTheCork.Data/UnderTheCork.Data.csproj
+++ b/UnderTheCork/UnderTheCork.Data/UnderTheCork.Data.csproj
@@ -53,6 +53,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="IUnderTheCorkSqlDbContext.cs" />
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\EfRepository.cs" />
